# PolygonSDF

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  TriangleSample.cpp  TriangleSample.h  TriangleSample.slang
.github/workflows/: ci.yml
Application/: Main.cpp  PolygonSDFApplication.cpp  PolygonSDFApplication.h
Benchmarks/: Benchmark.h  Main.cpp
Data/BenchmarkData/: GREAT_WORK.json  cat.json  zoo.json
Data/Tests/: line_cut_line_line_input.csv  line_cut_line_line_output.csv  line_cut_point_line_input.csv  line_cut_point_line_output.csv  line_cut_point_point_input.csv  nested_polygon_polycut_data.csv  point_cut_line_lines_input.csv  point_cut_line_output.csv  point_cut_line_points_input.csv  point_cut_point_input.csv  point_cut_point_output.csv  polycut_data.csv  sdf_algorithm_line_region_output.csv  sdf_algorithm_point_region_output.csv  sdf_algorithm_polygon_input.csv
Shaders/: AlgorithmOutput.3d.slang  Common.slang  DistanceVisualization.slang  EdgeRegionAlgorithmOutput.3d.slang  LineRegionAlgorithmOutput.3d.slang  ModifiedDepthEdgeRegionAlgorithmOutput.3d.slang  ModifiedDepthVertexRegionAlgorithmOutput.3d.slang  NaivePolygonDistance.3d.slang  PointRegionAlgorithmOutput.3d.slang  PolygonSDF.slang  SimpleMeshEdgeRegionAlgorithmOutput.3d.slang  SimpleMeshVertexRegionAlgorithmOutput.3d.slang  SolidColor.3d.slang  SolidColor.slang  VertexRegionAlgorithmOutput.3d.slang
Source/: CommonConstants.h  Main.cpp  PolygonSDF.cpp  PolygonSDF.h  PolygonSDFApplication.cpp  PolygonSDFApplication.h
Source/Algorithm/: SdfPlaneAlgorithm.cpp  SdfPlaneAlgorithm.h  SdfPlaneAlgorithmExecutionDesc.h  SdfPlaneAlgorithmOutput.cpp  SdfPlaneAlgorithmOutput.h
Source/Algorithm/Region/: EdgeRegion.cpp  EdgeRegion.h  EdgeRegionBoundVertex.h  LineRegion.cpp  LineRegion.h  LineRegionBoundVertex.h  PointRegion.cpp  PointRegion.h  PointRegionBoundVertex.h  Region.cpp  Region.h  RegionBoundVertex.h  VertexRegion.cpp  VertexRegion.h  VertexRegionBoundVertex.h
Source/DistancePass/: DistancePass.cpp  DistancePass.h  FullScreenTriangle.cpp  FullScreenTriangle.h
Source/Editor/Aggregator/: PolygonPeekingEditorAggregator.cpp  PolygonPeekingEditorAggregator.h  StackPeekingEditorAggregator.cpp  StackPeekingEditorAggregator.h  StackSizeEditorAggregator.cpp  StackSizeEditorAggregator.h
Source/Editor/Command/: AddNewGroupStackCommand.cpp  AddNewGroupStackCommand.h  AddNewOutlineStackCommand.cpp  AddNewOutlineStackCommand.h  AddPointCommand.cpp  AddPointCommand.h  AddPointStackCommand.cpp  AddPointStackCommand.h  AddVertexStackCommand.cpp  AddVertexStackCommand.h  CalculateSdfPlaneAlgorithmCommand.cpp  CalculateSdfPlaneAlgorithmCommand.h  DeleteGroupStackCommand.cpp  DeleteGroupStackCommand.h  DeleteOutlineStackCommand.cpp  DeleteOutlineStackCommand.h  DeletePointStackCommand.cpp  DeletePointStackCommand.h  DeleteVertexStackCommand.cpp  DeleteVertexStackCommand.h  InsertPointStackCommand.cpp  InsertPointStackCommand.h  InsertVertexStackCommand.cpp  InsertVertexStackCommand.h  MergePolygonWithOffsetStackCommand.cpp  MergePolygonWithOffsetStackCommand.h  MergeShapeWithOffsetStackCommand.cpp  MergeShapeWithOffsetStackCommand.h  MoveGroupStackCommand.cpp  MoveGroupStackCommand.h  MoveOutlineStackCommand.cpp  MoveOutlineStackCommand.h  SetPolygonStackCommand.cpp  SetPolygonStackCommand.h  SetShapeStackCommand.cpp  SetShapeStackCommand.h  StackCommand.cpp  StackCommand.h  UpdatePointStackCommand.cpp  UpdatePointStackCommand.h  (+2 more)
Source/Editor/Constraint/: DeleteGroupEditorConstraint.cpp  DeleteGroupEditorConstraint.h  DeleteOutlineEditorConstraint.cpp  DeleteOutlineEditorConstraint.h  DeletePointEditorConstraint.cpp  DeletePointEditorConstraint.h  DeleteVertexEditorConstraint.cpp  DeleteVertexEditorConstraint.h  SdfPlaneAlgorithmConstraint.cpp  SdfPlaneAlgorithmConstraint.h
Source/Editor/Consumer/: EventMenuEditorConsumer.h  GuiStateEditorConsumer.cpp  GuiStateEditorConsumer.h  PropertyUpdatingEditorConsumer.cpp  PropertyUpdatingEditorConsumer.h  VisualEditorStateChangeEditorConsumer.cpp  VisualEditorStateChangeEditorConsumer.h
Source/Editor/Core/: Editor.cpp  Editor.h  EditorAggregation.h  EditorAggregator.h  EditorCommand.h  EditorConstraint.h  EditorConsumer.h  EditorEvent.h  EditorStack.cpp  EditorStack.h  EditorSupplier.cpp  EditorSupplier.h  EditorTransformation.h  PublishedEvent.cpp  PublishedEvent.h  StackEntry.cpp  StackEntry.h
Source/Editor/Event/: ConstraintViolationEvent.cpp  ConstraintViolationEvent.h  NewCommandEvent.cpp  NewCommandEvent.h  NewStackCommandEvent.cpp  NewStackCommandEvent.h  StackTransformedEvent.cpp  StackTransformedEvent.h  UnknownCommandEvent.h  (+1 more)
Source/Polygon/: Edge.h  Outline.cpp  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Segment.cpp  Segment.h  Shape.cpp  SubPolygon.cpp  SubPolygon.h  Vertex.h
Source/PolygonRenderer/: PolygonOutlineRenderer.cpp  PolygonOutlineRenderer.h
Source/Rendering/: FullScreenTriangle.cpp  FullScreenTriangle.h  RenderObject.h
Source/Shape/: Edge.cpp  Outline.h  Shape.h  Vertex.h
Source/Util/: CoordinateUtil.cpp  CoordinateUtil.h  Deferred.h  IndexUtil.cpp  IndexUtil.h  MathUtil.h  RangeGenerator.cpp  RangeGenerator.h  WithImGuiId.cpp  WithImGuiId.h
Tests/: Main.cpp
Tests/Algorithm/: TestSdfPlaneAlgorithm.h
Tests/Benchmark/: Benchmark.cpp  Main.cpp
Tests/Util/: TestCommand.cpp  TestCommand.h  TestConsumer.cpp  TestConsumer.h  TestUtils.cpp  TestUtils.h
Thesis/: README.md  thesis.bib  thesis.cls  thesis.tex
Thesis/content/: impl.tex  intro.tex  sum.tex  user.tex
Thesis/diagrams/: class_algorithm.puml  class_editor.puml  class_editor_aggregator.puml  class_editor_command.puml  class_editor_constraint.puml  class_editor_consumer.puml  class_editor_event.puml  class_editor_published_event.puml  class_editor_transformation.puml  class_gui_editor.puml  class_mouse_input_handler.puml  class_presenter.puml  class_shape_renderer.puml  class_visual_editor.puml  component_project.puml  usecase_editor_actions.puml  usecase_polygon_actions.puml  usecase_visual_editor.puml  usecase_visualization_settings.puml
(+168 files in other folders)
